// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322: Type '\\"test\\"' is not assignable to type 'number'.
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases commonjs-usage 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339: Property 'test' does not exist on type 'typeof \\"xfile'.
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases ignore-child-compiler-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases skip-type-check-on-build-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,1): error TS1005: '{' expected.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420: Class 'TestImpl' incorrectly implements interface 'Test'.
  Property 'doStuff' is missing in type 'TestImpl'.
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-error 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`TestCases use-library-type-definition-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,24): error TS7016: Could not find a declaration file for module 'react'. 'xfile' implicitly has an 'any' type.
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases use-library-type-definition-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
